--- a/templates/cat/new.html.twig
+++ b/templates/cat/new.html.twig
@@ -1,15 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello CatController!{% endblock %}
-{% block javascripts %}
-            
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">;</script>;  
-            <script src="/build/places.js">;</script>;
-            <script src="/colorstyle.js">;</script>;
 
+{% block javascripts %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  
+    <script src="/build/places.js"></script>
+    <script src="/colorstyle.js"></script>
 {% endblock %}
 
-      
 {% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
@@ -17,10 +15,9 @@
 </style>
 
 <div class="example-wrapper">
- 
-    <section class="catregister">
-        <h1>Enregistrez votre chat. </h1>
-        <br>
+     <section class="catregister">
+        <h4>Enregistrez votre chat. </h4>
+        <hr>
         {{ form_start(form) }}
             <div class="comment_form">
                 <p>
@@ -35,90 +32,109 @@
                 {{ form_label(form.picture, 'photo :', {'label_attr': {'class': 'form-label'}}) }}
                 {{ form_widget(form.picture, {'attr': {'class': 'form-control'}}) }}
                 </p>
-                  {#  <div id="container">
-        <div id="eyes">
-            <h3>Couleur des yeux</h3>
-            <div id="eyescolors">
-                <div class="blurb" id="B" style="background-color: #87aed1">Bleus</div>
-                <div class="blurb" id="R" style="background-color: #92794c">Marron</div>
-                <div class="blurb" id="Y" style="background-color: #e1b700">Jaunes</div>
-                <div class="blurb" id="G" style="background-color: #4a8910">Verts</div>
-            </div>
-        </div>
+                <p>
+                {{ form_label(form.place, 'Commune :', {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.place, {'attr': {'class': 'form-control'}}) }}
+                </p>
+                
+                <div id="eyes">
+                    <p class ='form-label'>Couleur des yeux :</p>
+                    <div id="eyescolors" style="display: flex; gap: 1rem; justify-content: space-envely">
+                        <div class="type">
+                            <img src="/pictures/blue-cat-eye.svg" class="blurb" id="B"></img>
+                            <p>bleus</p>
+                        </div>
+                        <div class="type">
+                            <img src="/pictures/brown-cat-eye.svg"class="blurb" id="R"></img>
+                            <p>marrons</p>
+                        </div>
+                        <div class="type">   
+                            <img src="/pictures/yellow-cat-eye.svg"class="blurb" id="Y"></img>
+                            <p>jaunes</p>
+                        </div>
+                        <div class="type">
+                            <img src="/pictures/green-cat-eye.svg"class="blurb" id="G"></img>
+                            <p>verts</p>
+                        </div>    
+                    </div>
+                </div>
 
-        <div id="pattern">
-            <h3>Type de robe</h3>
-            <div id="patterntype">
-                <div class="blurb" id="P">Unie</div>
-                <div class="blurb" id="S">Rayée</div>
-                <div class="blurb" id="P">Tâchetée</div>
+                <div id="pattern">
+                    <p class = 'form-label'>Type de pelage :</p>
+                    <div id="patterntype" style="display: flex; gap: 1rem; justify-content: space-envely">
+                        <div class="type">
+                            <img src="/pictures/plein.png" class="blurb logo" id="P"></img>
+                            <p>uni</p>
+                        </div>
+                        <div class="type">
+                            <img src="/pictures/rayure.png" class="blurb logo" id="B"></img>
+                            <p>rayé</p>
+                        </div>
+                        <div class="type">
+                            <img src="/pictures/tache.png" class="blurb logo" id="T"></img>
+                            <p>tâcheté</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div id="color">
+                    <p class = 'form-label'>Couleur du pelage :</p>
+                    <div id="colors" style="display: flex; gap: 1rem; justify-content: space-envely">
+                        <div class="blurb simple-color" id="W" style="border: 1px solid grey; height: 50px; width: 50px; background-color: #fff"></div>
+                        <div class="blurb simple-color" id="K" style="border: 1px solid grey; height: 50px; width: 50px; background-color: #000"></div>
+                        <div class="blurb simple-color" id="N" style="border: 1px solid grey; height: 50px; width: 50px; background-color: #973b0ad8"></div>
+                        <div class="blurb simple-color" id="Y" style="border: 1px solid grey; height: 50px; width: 50px; background-color: #a5a6a3"></div>
+                        <div class="blurb simple-color" id="G" style="border: 1px solid grey; height: 50px; width: 50px; background-color: #df6406"></div>
+                    </div>
+                </div>
+            
+                <p>
+                    {{ form_label(form.details, 'signes distinctifs :', {'label_attr': {'class': 'form-label'}}) }}
+                    {{ form_widget(form.details, {'attr': {'class': 'form-control'}}) }}
+                </p>
+                {# Hidden field for colorstyle #}
+                {{ form_widget(form.colorstyle) }}
+                <br>
+                <button id="cat-register-button" type="submit" class="btn btn-success">Enregistrer</button>
             </div>
-        </div>
-
-        <div id="color">
-            <h3>Couleurs de la robe</h3>
-            <div id="colors">
-                <div class="blurb" id="W" style="background-color: #fff"></div>
-                <div class="blurb" id="K" style="background-color: #000"></div>
-                <div class="blurb" id="N" style="background-color: #973b0ad8"></div>
-                <div class="blurb" id="Y" style="background-color: #a5a6a3"></div>
-                <div class="blurb" id="G" style="background-color: #df6406"></div>
-            </div>
-        </div>
-    </div>
+            
+        {{ form_end(form) }}
+    </section>
+</div>
     <br>
-    <p id="colorresult"></p> #}
+   
 
-   {#  <script>
-let colorResult = [];
-let blurbs = document.getElementsByClassName('blurb');
-console.log(blurbs);
-
-for(let blurb of blurbs) {
-    blurb.addEventListener('click', (e) => {
-        
-      if(e.currentTarget.style.border == "" || e.currentTarget.style.border == "2px solid darkgray") {
-            e.currentTarget.style.border = "3px solid red";
+<script>
+    let colorResult = [];
+    let blurbs = document.getElementsByClassName('blurb');
+    for(let blurb of blurbs) {
+        blurb.style.filter = "opacity(50%)";
+    }
+    for(let blurb of blurbs) {
+        blurb.addEventListener('click', (e) => {
+        if(e.currentTarget.style.filter  == "" || e.currentTarget.style.filter == "opacity(50%)") {
+            e.currentTarget.style.filter = "opacity(100%)";
         } else {
-            e.currentTarget.style.border = "3px solid darkgray";
+            e.currentTarget.style.filter = "opacity(50%)";
         }; 
-        console.log(e.currentTarget.style.border);
         // if need is selected, store it. Else, remove it
         if(colorResult.includes(e.currentTarget.id)) {
             colorResult = colorResult.filter(code => code !== e.currentTarget.id);
         } else {
             colorResult.push(e.currentTarget.id);
         };
-       document.getElementById("colorresult").innerHTML = `${colorResult.join('')}`;
-       
+        let finalcolor = colorResult.join('');
+        document.getElementById('cat_colorstyle').value = finalcolor;
+        console.log(document.getElementById('cat_colorstyle').value);
     })
-};
-    </script> #}
-                 <p>
-                {{ form_label(form.colorstyle, 'couleur :', {'label_attr': {'class': 'form-label'}}) }}
-                {{ form_widget(form.colorstyle, {'attr': {'class': 'form-control'}}) }}
-                </p>
-                
-                <p>
-                {{ form_label(form.details, 'signe :', {'label_attr': {'class': 'form-label'}}) }}
-                {{ form_widget(form.details, {'attr': {'class': 'form-control'}}) }}
-                </p>
-                <p>
-                {{ form_label(form.place, 'commune de résidence :', {'label_attr': {'class': 'form-label'}}) }}
-                {{ form_widget(form.place, {'attr': {'class': 'form-control'}}) }}
-                </p>
-            </div>
-            <br>
-            <button type="submit" class="btn btn-success">Enregistrer</button>
-            </div>
-           
-                   
-        
-        {{ form_end(form) }}
-    </section>
-
-     
-  
+    };
+    </script>
 
 </div>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJaDs8GhvKgIfGrMyp4D924YCoTryGgn0&libraries=places"></script>
+
+
 {% endblock %}
+
+
