--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -1,16 +1,22 @@
 #sticky {
     position: sticky;
-    z-index: 3;
+    height: 60px;
+    z-index: 100;
     top: 0;
     background-color: #413d3d;
-    border-bottom-left-radius:1rem;
-    border-bottom-right-radius:1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    box-shadow: 0px 3px 4px grey;
 }
 
 #logo {
     color: ivory;
     display: flex;
     justify-content: end;
+    width: 200px;
+    min-width: 200px;
+    display: flex;
 }
 
 #logo img {
@@ -35,7 +41,7 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-bottom: 0.5rem;
+   /*  padding-bottom: 0.5rem; */
 }
 
 .navi-collaspe { background-color:#ffffff; }
@@ -63,7 +69,7 @@ header .dropdown .content {
 
 header .dropdown .content > a {
     text-decoration:none;
-    color: green;
+    color: ivory;
     padding: 0.2em 0;
 }
 
@@ -71,7 +77,7 @@ header .dropdown:hover .content {
     display:flex;
     flex-direction: column;
     position: absolute;
-    background-color: red;
+    background-color: rgba(65, 61, 61, 0.8);
     top: 3rem;
     width: 120%;
     padding: 0.5rem 1rem;
@@ -92,7 +98,7 @@ header .icon {
         font-size: 2rem;
         display: block;
         position: absolute;
-        right: 0;
+        left: 0;
         width: 5% !important;
         padding: 0 !important;
        }
@@ -103,8 +109,12 @@ header .icon {
         padding: 0.5em 0;
         width: 100%;
         text-align: left;
+        background-color: red;
     }
 
+    header.responsive > a {
+        margin-left: 2rem;
+    }
     header.responsive button {
         padding: 0.5em 0;
         display: block;
