--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -1,9 +1,10 @@
 body {
     position: relative;
-    max-width: 1080px;
+    max-width: 1400px;
     margin: 0 auto;
     font-family: 'Montserrat';
     text-decoration: none;
+    background-color: whitesmoke;
 }
 
 @font-face
