--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -1,37 +1,54 @@
 .home {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
     
-    #actualité {
-        border: 1px solid black;
-        padding: 1em;
-        max-width: 400px;
-        min-width: 200px;
-        height: 70vh;
-        overflow: scroll;
+    .advice {
+        display: flex;
+        flex-direction: row;
+        flex-wrap:wrap;
+        gap: 2rem;
+        align-items: center;
+        justify-self: center;
+        height: 40px;
     }
 
+    .advice-text {
+        line-height: 40px;
+    }
+    .alert {
+        padding: 0 2rem;
+    }
+
+    .article {
+        height: 500px;
+        min-width: 250px;
+        margin: 0 0.5rem;
+        box-shadow: 1px 2px 4px darkgrey;
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
+        padding: 0.5rem;
+        background: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0.7));
+    }
     .article-picture {
         height: 200px;
         width: 100%;
-        border-top-right-radius: 10px;
-        border-bottom-left-radius: 10px;
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
         overflow: hidden;
     }
 
     .article-picture-background {
         width: 100%;
-        
-    }
-    .article-title {
-        font-size: 1.5em;
-        margin-top: 0.5em;
     }
 
-    .article.text {
+    .article-title {
+        font-size: 1.5em;
+        margin: 0.5em 0;
+        height: 60px;
+
+    }
+
+    .article-text {
         text-align:justify;
+        height: 100px;
         display: -webkit-box; 
         -webkit-line-clamp: 4;
         -webkit-box-orient: vertical;
@@ -39,26 +56,56 @@
         text-overflow:ellipsis;
     }
 
-    .advice {
-        height: 80px;
-        width: 200px;
-        margin: 0.2em;
-        border-radius: 10px;
+    img {
+        object-fit:fill;
+        overflow: hidden;
     }
 
-    #buttons {
+    #cat1 {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 3;
+    }
+
+    #cat2 {
+        grid-column-start: 4;
+        grid-column-end: 6;
+        grid-row-start: 1;
+        grid-row-end: 3;
+    }
+
+    #cat4 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 3;
+        grid-row-end: 4;
+    }
+
+    #cat5 {
+        grid-column-start: 3;
+        grid-column-end: 5;
+        grid-row-start: 3;
+        grid-row-end: 4;
+    }
+
+    #cat6 {
+        grid-column-start: 5;
+        grid-column-end: 6;
+        grid-row-start: 3;
+        grid-row-end: 5;
+    }
+
+    .card {
+        max-width: 400px;
+        min-width: 200px;
+        margin: 0.5em;
+        border-radius: 5px;
+        box-shadow: 0px 2px 3px grey;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
-    }
-
-    .card {
-        height: 200px;
-        width: 150px;
-        margin: 0.5em;
-        border-radius: 10px;
-        box-shadow: 0px 2px 3px grey;
     }
 
     .card-img-top {
@@ -67,38 +114,143 @@
     }
 
     .cat-picture {
-        width: 100%;
-        height: 100px;
+        width: 180px;
+        height: 200px;
         object-fit: cover;
-       
+        margin-top: 1rem;
+        border-radius: 5px;
+        background: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0.7));
+    }
+
+    .cat-name {
+        font-weight: bold;
+        font-size: 1.2rem;
+        margin-top: 1rem;
     }
     .cats {
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
         flex-wrap: wrap;
+        
         gap: 0.3rem;
-        overflow: scroll;
+        
     } 
+
+    
+    .gallery-picture {
+        object-fit: cover;
+        overflow: hidden;
+    }
+
+    .grid-gallery {
+        padding: 1rem 0;
+        background-color: rgb(149, 180, 237);
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-auto-rows: 150px;
+        grid-column-gap: 10px;
+        grid-row-gap: 1em;
+    }
 
     h1 {
         font-size: 1.5em;
-        margin-top: 2em;
         margin-bottom: 1em;
+        padding: 1rem;
+        color:#5a5353;
+        background-color: rgb(245, 245, 245, 0.85);
+        box-shadow: 0px 3px 4px rgb(170, 168, 168);
+        z-index: 10;
     }
 
-    #right, #left {
-        max-width: 600px;
-        margin-top: 50px;
+    .home {
+        position: relative;
     }
 
-    .topcard {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+    #isLost {
+        font-size: 2rem;
+        color: #413d3d;
+        margin: 0 1rem;
     }
-
+    #item1 {
+        width: 100%;
+        position: sticky;
+        top: 60px;
+        z-index: 3;
+    }
+    #item2 {
+        width: 100%;
+        position: sticky;
+        top: 120px;
+        z-index: 3;
+    }
+    #item3 {
+        width: 100%;
+        position: sticky;
+        top: 180px;
+        z-index: 3;
+    }
+    #item4 {
+        width: 100%;
+        position: sticky;
+        top: 220px;
+        z-index: 3;
+    }
+    
     .localize {
         margin: 0.5rem;
     }
+
+    .seemore {
+        color: blue;
+        text-align: right;
+    }
+
+    .slick-arrow {
+        height: 70px;
+        width: 70px;
+        background-color: rgb(129, 157, 209, 0.7);
+        border-radius: 50%;
+        z-index: 3;
+    }
+
+    .slick-prev {
+        margin-left: 1rem;
+        margin-top: 1rem;
+    }
+    .slick-next {
+        margin-right: 1rem;
+        margin-top: 1rem;
+    }
+
+    .slider {
+        background-color: rgb(129, 157, 209);
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+
+    .topcard {
+        width: 180px;
+        margin: 0.2rem;
+    }
+}
+
+#arrow-up {
+    width: 70px;
+    height: 70px;
+    position: sticky;
+    bottom: 10vh;
+    left: 95vw;
+    z-index: 200;
+}
+
+.gelatine {
+    animation: hithere 1s ease infinite;
+    }
+@keyframes hithere {
+30% { transform: scale(1.2); }
+40%, 60% { transform: rotate(-20deg) scale(1.2); }
+50% { transform: rotate(20deg) scale(1.2); }
+70% { transform: rotate(0deg) scale(1.2); }
+100% { transform: scale(1); }
 }
