--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -158,7 +158,7 @@
         margin-bottom: 1em;
         padding: 1rem;
         color:#5a5353;
-        background-color: rgb(245, 245, 245, 0.85);
+        background-color: rgba(230, 230, 230, 0.9);
         box-shadow: 0px 3px 4px rgb(170, 168, 168);
         z-index: 10;
     }
@@ -193,7 +193,7 @@
     #item4 {
         width: 100%;
         position: sticky;
-        top: 220px;
+        top: 240px;
         z-index: 3;
     }
     
