--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -1,12 +1,12 @@
 .login {
-    margin: 15vh 1rem;
+    margin: 5vh auto;;
     max-width: 800px;
     min-width: 200px;
     border-radius: 10px;
     box-shadow: 0px 3px 4px grey;
     border-radius: 10px;
     display: block;
-    margin : 5vh auto;
+
 
     a {
         margin: 1rem;
@@ -21,8 +21,8 @@
     
     #cat-connexion-picture {
         width: 100%;
-        height: 300px;
-        background-color:linear-gradient(to bottom, rgba(248, 248, 255, 1) 60%, rgba(248, 248, 255, 0.75));
+        height: 400px;
+        background:linear-gradient(to bottom, rgba(14, 14, 245, 1), 30%, rgba(14, 14, 245, 0)), url("/public/pictures/cat-blue-eyes.webp");
         object-fit:cover;
         object-position: center;
         overflow: hidden;
@@ -31,7 +31,7 @@
         border-top-right-radius: 10px;
         }
 
-    .mb-3 {
+   .mb-3 {
         margin: 0 1rem;
     }
 
