--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -9,8 +9,8 @@
 </style>
 
 <div class="login" >
-    <img src="/pictures/cat-blue-eyes.webp" id="cat-connexion-picture">
-    <p>Saisissez votre identifiant et votre mot de passe pour vous connecter à l'application</p>
+    <img id="cat-connexion-picture">
+    <p>CONNECTEZ-VOUS A L'APPLICATION</p>
     <hr>
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
