--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -6,7 +6,7 @@
                 <div class="content">
                     <a href="">Articles</a>
                     <a href="">Utilisateurs</a>
-                    <a href="">Messages</a>
+                    <a id="endlist" href="">Messages</a>
                 </div>
         </div>
         {% endif %}
