--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -10,6 +10,11 @@
     box-shadow: 0px 3px 4px grey;
 }
 
+#endlist {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
 #logo {
     color: ivory;
     display: flex;
