--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -3,7 +3,7 @@
     height: 60px;
     z-index: 100;
     top: 0;
-    background-color: #413d3d;
+    background-color: var(--nav-color);
     display: flex;
     flex-direction: row;
     align-items: center;
