--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -3,16 +3,26 @@
     .advice {
         display: flex;
         flex-direction: row;
-        flex-wrap:wrap;
-        gap: 2rem;
-        align-items: center;
-        justify-self: center;
-        height: 40px;
+        flex-wrap: wrap;
+        gap: 1rem;
+        align-items:flex-start;
+        justify-content: flex-start;
+        margin: 1rem 2rem;
+    }
+
+    .advice-arrow {
+        border: 1px solid black;
+        border-radius: 50%;
     }
 
     .advice-text {
-        line-height: 40px;
+        line-height: 35px;
     }
+
+    .advice-title {
+        line-height: 37px;
+    }
+
     .alert {
         padding: 0 2rem;
     }
@@ -106,11 +116,20 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
+        background-color: var(--card-color);
     }
 
     .card-img-top {
         height: 100%;
         width: auto;
+    }
+
+    #cat-2, #cat-12 {
+        grid-column: span 2;
+    }
+
+    #cat-4, #cat-9 {
+        grid-row: span 2;
     }
 
     .cat-picture {
@@ -137,30 +156,74 @@
         
     } 
 
-    
-    .gallery-picture {
-        object-fit: cover;
+    .gallery {
+       /*  height: 100vh; */
+        width: 100%;
+        padding:2rem;
+        background-color: #413d3d;
+        position: relative;
         overflow: hidden;
     }
 
-    .grid-gallery {
-        padding: 1rem 0;
-        background-color: rgb(149, 180, 237);
+    #grid {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-auto-rows: 150px;
-        grid-column-gap: 10px;
-        grid-row-gap: 1em;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-auto-rows: 300px;
+        gap: 1rem;
+        /* height: 100vh; */
+        overflow-y: scroll;
+        grid-auto-flow: dense;
     }
 
-    h1 {
+    #grid::-webkit-scrollbar {
+        background-color: #938888;
+        width: 10px;
+    }
+
+    #grid::-webkit-scrollbar-thumb {
+        background-color: #757575;
+    }
+
+    .grid-item {
+        overflow: hidden;
+        cursor: pointer;
+        transition: all 0.2s ease;
+    }
+
+    .grid-img {
+        width: 100%;
+        height: 100%;
+        border-radius: 5px;
+        object-fit: cover;
+        display: block;
+        transition: transform 0.2s ease;
+    }
+
+    .grid-img:hover {
+        transform: scale(1.1);
+        border-radius: 5px;
+    }
+
+    .grid-item:hover {
+        transform: scale(1.05);
+        border-radius: 5px;
+        box-shadow: 0 0 10px darkslategrey;
+        z-index: 2;
+    }
+
+    h2 {
         font-size: 1.5em;
         margin-bottom: 1em;
         padding: 1rem;
-        color:#5a5353;
-        background-color: rgba(230, 230, 230, 0.9);
-        box-shadow: 0px 3px 4px rgb(170, 168, 168);
+        color: var(--background-color);
+        background-color: var(--section-color);
+        /* box-shadow: 0px 3px 4px rgb(170, 168, 168); */
         z-index: 10;
+        
+    }
+
+    .hidden {
+        display:none;
     }
 
     .home {
@@ -177,18 +240,21 @@
         position: sticky;
         top: 60px;
         z-index: 3;
+        border-bottom: 0.4 px solid white;
     }
     #item2 {
         width: 100%;
         position: sticky;
         top: 120px;
         z-index: 3;
+        border-bottom: 0.4 px solid white;
     }
     #item3 {
         width: 100%;
         position: sticky;
         top: 180px;
         z-index: 3;
+        border-bottom: 0.4 px solid white;
     }
     #item4 {
         width: 100%;
@@ -199,6 +265,50 @@
     
     .localize {
         margin: 0.5rem;
+    }
+
+    #popup-bg {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 5;
+    align-items: center;
+    justify-content: center;
+    }
+
+    #popup-bg.active {
+        display: flex;
+    }
+
+    #popup-close {
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translate(50%, -50%);
+        cursor: pointer;
+        transition: background-color 0.2s ease;
+        border-radius: 50%;
+    }
+
+    #popup-close:hover {
+        background-color: rgb(118, 108, 108);
+    }
+
+    #popup-content {
+        max-width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+    }
+
+    #popup-img {
+        width: 100%;
+        height: auto;
     }
 
     .seemore {
@@ -229,9 +339,25 @@
         padding-bottom: 2rem;
     }
 
+    table {
+        width: 100%;
+    }
     .topcard {
         width: 180px;
         margin: 0.2rem;
+    }
+
+    .up {
+        transform: rotate(180deg);
+    }
+
+    .visible {
+        display: block;
+        margin: 0 2rem;
+        background-color: var(--background-color);
+        padding: 2rem;
+        border-radius: 20px;
+        box-shadow: 1px 2px 4px darkgrey;
     }
 }
 
@@ -240,8 +366,8 @@
     height: 70px;
     position: sticky;
     bottom: 10vh;
-    left: 95vw;
-    z-index: 200;
+    left: 90vw;
+    z-index: 20;
 }
 
 .gelatine {
