--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -19,10 +19,10 @@
             </div>
         </div>
         {% endif %}
-        <a href="">C.G.U.</a>
+        <a href="{{ path('app_cgu') }}">C.G.U.</a>
         <a href="">Contact</a>
         {% if app.user %}
-        <a href="app_logout">Déconnexion</a>
+        <a href="{{ path('logout') }}">Déconnexion</a>
         {% else %}
         <a href="login">Connexion</a>
         {% endif %}
@@ -38,8 +38,8 @@
     function navDeploy() {
         var x = document.getElementById("navbar");
         if(x.className === "navi") {
-          x.className += " responsive";
-          } else {
+            x.className += " responsive";
+            } else {
             x.className = "navi";
         }
     }
