--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,13 +1,20 @@
 {% extends 'base.html.twig' %}
 
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('geoloc') }}
+    {{ encore_entry_script_tags('gallery') }}
+    {{ encore_entry_script_tags('scroll-arrow') }}
+    {{ encore_entry_script_tags('advice-arrow') }}
+    {{ encore_entry_script_tags('status-change') }}
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+{% endblock %}
+
 {% block title %} {{ parent() }} - Accueil{% endblock %}
 
 {% block body %}
-<pre>
-    {{ dump(app.user) }}
-</pre>
 <section class="home">
-<h1 id="item1">Chats</h1>
+<h2 id="item1">Chats</h2>
     <section class="signal">
         {% if app.user %}
             <section class="cats">
@@ -46,7 +53,7 @@
             </section>
             {% endif %}
     </section>
-<h1 id="item2">Les dernières actualités...</h1>
+<h2 id="item2">Les dernières actualités...</h2>
     <section class="actualites">
         <div class="slider">
             {% for article in articles %}
@@ -62,112 +69,126 @@
             {% endfor %}
         </div>
     </section>
-<h1 id="item3">Les conseils des professionnels</h1>
+<h2 id="item3">Les conseils des professionnels</h2>
     <section class="home">
         <br>
         <article class="advice">
-            <img src="/pictures/cross.png">
-            <p class="advice-text">Les soins dès le plus jeune âge</p>
+            <p class="advice-title">Connaître le calendrier de vaccination de votre chat</p>
+            <img class="advice-arrow" src="{{ asset('build/pictures/arrow.svg') }}">
+            <div class="hidden">
+                <p >Non obligatoires, les vaccins du chat sont pourtant d’une importance capitale, car ils le protègent de certaines maladies. Même si votre chat vit en appartement ou ne sort que sporadiquement, il est toujours recommandé de l'immuniser.</p>
+                <table>
+                    <tr>
+                        <th>Age</th>
+                        <th>Vaccins</th>
+                    </tr>
+                    <tr>
+                        <td>2 mois</td>
+                        <td>Primo vaccination (coryza, typhus et chlamydiose)<td>
+                    </tr>
+                    <tr>
+                        <td>3 mois</td>
+                        <td>primo vaccination (rage, leucose féline) et rappels (coryza, typhus et chlamydiose)</td>
+                    </tr>
+                    <tr>
+                        <td>4 mois</td>
+                        <td>rappels (coryza et typhus)</td>
+                    </tr>
+                </table>
+            </div>
         </article>
         <article class="advice">
-            <img src="/pictures/cross.png">
-            <p class="advice-text">Le calendrier des vaccinations</p>
+            <p class="advice-title">Doit-on laisser son chaton mordre ou griffer ?</p>
+            <img class="advice-arrow" src="{{ asset('build/pictures/arrow.svg') }}">
+            <div class="hidden">
+                <p>Si vous jouez avec votre chaton, il peut parfois mordiller vos doigts, vos avants-bras. Il ne faut pas le laisser faire. Certains chatons n’ont pas bien appris le contrôle de la morsure avec leur mère. En effet la chatte enseigne ce contrôle de la morsure aux chatons jusqu’à l’âge de 3 mois et souvent ils sont séparés avant cet âge de leur mère… C’est donc à vous de lui faire comprendre qu’il ne doit pas jouer avec ses dents ou ses griffes.<br/>
+                Tout d’abord ne jouez jamais avec votre chaton en utilisant vos mains ou vos doigts comme « appât », préférez l’utilisation de jouets comme une canne à pêche ou une souris en corde ou en peluche, etc…<br/>
+                Si votre chaton s’attaque à vos mains, vos doigts ou autre, dites « Non ! » d’une voix forte, repoussez le et cessez immédiatement de jouer avec lui. Il comprendra ainsi que s’il utilise ses dents ou ses griffes, le jeu cesse. Vous pouvez s’il insiste, le prendre par la peau du cou, comme le ferait sa mère pour le remettre par terre s’il était sur vous.</p>
+                
+            </div>
         </article>
         <article class="advice">
-            <img src="/pictures/cross.png">
-            <p class="advice-text">Bien choisir son chat persan</p>
-        </article>
-        <article class="advice">
-            <img src="/pictures/cross.png">
-            <p class="advice-text">Comportements à risque</p>
+            <p class="advice-title">Tout savoir sur la litière...</p>
+            <img class="advice-arrow" src="{{ asset('build/pictures/arrow.svg') }}">
+            <div class="hidden">
+                <p>Pour que le chat puisse faire ses besoins confortablement et sans désagrément pour ses propriétaires, il va falloir vous équiper d’un bac à litière ou d’une maison de toilette, d’une litière naturelle, biodégradable, agglomérante et absorbant les odeurs. D’autres accessoires comme une poubelle pour litière ou encore des sacs et pelles pourront vous faciliter le nettoyage. Notre équipe vétérinaire vous donne de précieux conseils pour bien choisir sa litière pour chat ainsi que de nombreuses autres astuces !</p>
+                <h4>Quel type de litière choisir ?</h4>
+                <p>Il existe rarement de bonnes ou de mauvaises litières pour chat, il y a plutôt celles qui sont adaptées à votre chat et à vous-même. Pour choisir sa litière, il faudra penser à de nombreux critère comme le confort de votre chat, la fréquence d’entretien et la facilité de nettoyage mais également réfléchir à l’aspect écologique et biodégradable de la litière. Le choix est vaste !</p>
+                <h5>Les litières minérales</h5>
+                <p>Les litières minérales ne sont pas toujours recommandées, bien qu’elles soient les moins chères, car elles ne sont pas biodégradables et génèrent de la poussière ; à éviter si votre chat souffre de problèmes respiratoires.</p>
+                <h5>Les litières en silice</h5>
+                <p>Les litières en silice (Par exemple la litière Perlinette) sont constituées de cristaux, petites billes qui absorbent les odeurs et les urines, et qui ne collent pas aux pattes de votre chat. Biodégradables, légères et compactes, elles ne nécessitent pas d’être changées tous les jours. Il suffit de veiller à retirer les crottes quotidiennement avec une pelle à litière. L’entretien en devient donc facilité !</p>
+                <h5>Les litières végétales</h5>
+                <p>Les litières végétales à base de fibres végétales naturelles (maïs, orge, soja…) ou de copeaux de bois sélectionnés et dépoussiérés, sont absorbantes et biodégradables afin de garantir tout le confort nécessaire pour votre chat. Vous avez par exemple comme choix la  litière d'Almo Nature Catlitter. </p>
+                <h5>Les litières agglomérantes</h5>
+                <p>Les litières agglomérantes forment des petits blocs compacts au contact des liquides, et donc, des urines. Elles ne collent pas aux pattes de votre chat et absorbent parfaitement les odeurs. Leur pouvoir d’agglomération facilite le nettoyage de la litière et lui permet de rester propre plus longtemps.</p>
+            </div>
         </article>
     </section>
-<h1 id="item4">La gallerie des minous</h1>
+<h2 id="item4">La gallerie des minous</h2>
     <section class="gallery">
-        <br>
-        <section class="grid-gallery">
-            <img id="cat1" class="box">
-            <img id="cat2" class="box">
-            <img id="cat4" class="box">
-            <img id="cat5" class="box">
-            <img id="cat6" class="box">
-            <img id="cat7" class="box">
-            <img id="cat8" class="box">
-            <img id="cat9" class="box">
-        </section>
+        {# div popup is displayed on click #}
+        <div id="popup-bg">
+            <div id="popup-content">
+                <div id="popup-close">
+                    <img src="/pictures/close.svg" />
+                </div>
+                <img id="popup-img" src="#" />
+            </div>
+        </div>
+        {# div for grid display #}
+        <div id="grid">    
+            <div class="grid-item" id="cat-1">
+                <img src="./pictures/cat-1.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-2">
+                <img src="./pictures/cat-2.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-3">
+                <img src="./pictures/cat-3.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-4">
+                <img src="./pictures/cat-4.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-5">
+                <img src="./pictures/cat-5.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-6">
+                <img src="./pictures/cat-6.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-7">
+                <img src="./pictures/cat-7.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-8">
+                <img src="./pictures/cat-8.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-9">
+                <img src="./pictures/cat-9.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-10">
+                <img src="./pictures/cat-10.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-11">
+                <img src="./pictures/cat-11.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-12">
+                <img src="./pictures/cat-12.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-13">
+                <img src="./pictures/cat-13.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-14">
+                <img src="./pictures/cat-14.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-15">
+                <img src="./pictures/cat-15.jpg" alt="" class="grid-img"/>
+            </div>
+            <div class="grid-item" id="cat-16">
+                <img src="./pictures/cat-16.jpg" alt="" class="grid-img"/>
+            </div>
+        </div>
     </section>
-</section>
-<img class="gelatine" onclick="topFunction()" id="arrow-up" src="/pictures/arrow-up.svg">
-<script>
-    let coordx = document.getElementById('search_coordx');
-    let coordy = document.getElementById('search_coordy');
-    // if geolocation is activated, init function getPosition to catch current position
-    function showPosition(position)
-    {
-        // variables initiated to store positions
-        let xposition = position.coords.longitude;
-        let yposition = position.coords.latitude;
-        // update input value to display coords
-        coordx.value = xposition;
-        coordy.value = yposition;
-    };
-    if (navigator.geolocation)
-        {
-            navigator.geolocation.getCurrentPosition(showPosition);
-        }
-    else
-        {
-            x.innerHTML="Geolocation n’est pas prise en charge par ce navigateur.";
-        }
-    
-</script>
+<img class="gelatine" onclick="topFunction()" id="arrow-up" src="/pictures/arrow-up.svg"/>
 
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script>
-        function changeStatus(event) 
-        {
-            event.preventDefault();
-            const url = this.href;
-            const icone = this.querySelector('i');
-            axios.get(url).then(function(response){
-                if(icone.classList.contains('fa-magnifying-glass')) {
-                    icone.classList.replace('fa-magnifying-glass','fa-house-chimney');
-                } else { 
-                    icone.classList.replace('fa-house-chimney', 'fa-magnifying-glass');
-                }
-            })
-        };
-        
-        document.querySelectorAll('a.js-lost').forEach(function(lost)
-        {
-            lost.addEventListener('click', changeStatus());
-        });
-        
-</script>
-
-{# SCRIPT POUR FLECHE AU SCROLL DOWN #}
-<script>
-//Get the button:
-mybutton = document.getElementById("arrow-up");
-
-// When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
-
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-  document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-}
-
-</script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 {% endblock %}
 
